# nanoSNN

./: .gitignore  README.md  multigpu_train.sh  pyproject.toml  setup.py  train.py  train.sh  uniitest.py
.claude/: settings.local.json
analysis/st_erf/: README.md  __init__.py  run.py  st_erf.py  visualize.py
configs/: default_project_configs.yaml  smoke_test.yaml
configs/data_configs/: cifar10.yaml  cifar100.yaml  cifar10dvs.yaml  dvs128gesture.yaml  imagenet.yaml  imagenet_hf.yaml  mnist.yaml
configs/model_configs/: billeh_v1_mnist.yaml  mem_gated_attn_tiny.yaml  ms_resnet18.yaml  sdt_v1_small.yaml  sdt_v2_small.yaml  sdt_v3_small.yaml  spikformer_tiny.yaml  spikformer_tiny_psp.yaml  spiking_resnet18.yaml  spiking_vgg11.yaml
configs/optimizer_configs/: billeh_mnist.yaml  default.yaml  mem_gated_attn_tiny_cifar10.yaml  mem_gated_attn_tiny_imagenet1k.yaml  sdtv1_cifar10.yaml
configs/train_configs/: billeh_mnist.yaml  default.yaml  imagenet_hf.yaml  smoke_test.yaml
data/: __init__.py  build.py  datamodule.py  event_datasets.py  static_datasets.py  transforms.py
models/: __init__.py  build_model.py
models/billeh_v1/: __init__.py  billeh_column.py  load_sparse_torch.py  model.py
models/common/: __init__.py  ilif_ops.py  layers.py  patch_embed.py  psp_ops.py  registry.py  spike_ops.py  tl_neuron_ops.py  tl_spike_ops.py
models/mem_gated_attention/: __init__.py  mga_bwd_triton_kernel.py  mga_fwd_triton_kernel.py  mga_torch_infer.py  mga_triton_ops.py  model.py  test_fwd_kernel.py
utils/: __init__.py  callbacks.py  load_config.py  metrics.py  resume.py
(+11 files in other folders)
