[project]
name = "nanoSNN"
version = "0.1.0"
description = "Vision SNN training framework inspired by nanoLMengine"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "lightning>=2.0",
    "timm",
    "spikingjelly==0.0.0.0.14",
    "numpy",
    "PyYAML",
    "tensorboard",
    "setuptools<81",
    "wandb",
    "einops",
    "pandas",
    "h5py",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
